<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Climate</string>
    <string name="title_climate_awareness">🌍 Climate Awareness</string>
    <string name="climate_stats">🌡 Climate Stats</string>
    <string name="climate_news">📰 Climate News</string>
    <string name="carbon_calculator">🧮 Carbon Calculator</string>
    <string name="climate_tips">✅ Climate Tips</string>
    <string name="climate_maps">🗺 Climate Maps</string>
    <string name="image_gallery">🖼 Image Gallery</string>
    <string name="temperature_label">Temperature: %1$s°C</string>
    <string name="humidity_label">Humidity: %1$d%%</string>
    <string name="hint_distance">Enter distance (km)</string>
    <string name="btn_calculate">Calculate CO₂</string>
    <string name="result_placeholder">Estimated CO₂ will appear here</string>
    <string name="result_format">Estimated CO₂: %.2f kg</string>
    <string name="invalid_input">Invalid input</string>
    <string name="gallery_content_description">Climate change awareness gallery. Contains images and descriptions.</string>
    <string name="melting_glaciers">Melting Glaciers</string>
    <string name="wildfires">Wildfires</string>
    <string name="deforestation">Deforestation</string>
    <string name="pollution">Industrial Pollution</string>
    <string name="floods">Floods</string>
    <string name="droughts">Droughts</string>
    <string name="arctic_habitat">Arctic Habitat Loss</string>
    <string name="clean_energy">Clean Energy Future</string>
    <string name="fact_text">🌡️ Fact: %1$s</string>
    <string name="solution_text">✅ Solution: %1$s</string>
    <string name="tips_screen_desc">Climate change awareness tips screen</string>
    <string name="login">Login</string>
    <string name="title_geojson_map">India Climate Map</string>
    <string name="desc_center_map">Center Map</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="error_message">Error: %1$s</string>
    <string name="loading_data" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="welcome">Welcome</string>
    <string name="login_subtitle">Lorem ipsum dolor sit amet</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="desc_login_background">Blurred network-themed background</string>
    <string name="register_prompt">New user? Register here</string>
    <string name="join">Join Us</string>
    <string name="dob">Date of Birth (dd/mm/yyyy)</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="icon">Card Icon</string>
    <string name="title">Card Title</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="sixteen">16°C</string>
    <string name="ten_am">10 AM</string>
    <string name="city_name">Delhi</string>
    <string name="default_condition">Cloudy</string>
    <string name="temperature_format">%1$d°</string>
    <string name="min_max_format">%1$d°C / %2$d°C</string>
    <string name="humidity_format">Humidity: %1$d%%</string>
    <string name="time_format">EEE, h:mm a</string>
    <string name="default_city">Delhi</string>
    <string name="default_time">Fri, 10:30 AM</string>
    <string name="default_temperature">15°</string>
    <string name="default_min_max">20°C / 10°C</string>
    <string name="default_humidity">Humidity: 60%</string>
    <string name="twenty_two">22°C</string>
    <string name="calculator">Distance Converter</string>
    <string name="description">Description</string>
    <string name="map_image_desc">Climate change map of India</string>


</resources>
