<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/cal_bg"
    android:padding="24dp"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/textViewCalculatorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/hint_distance"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="@android:color/black"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white"
        android:layout_marginBottom="24dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_placeholder"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
