<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginEnd="12dp"
    android:background="@drawable/forecast_item_bg"
    android:gravity="center">

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/ten_am"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageWeather"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_cloudy"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty_two"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
